<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paws2_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/fifteenDp">

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q1"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question1"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz1"
                style="@style/ImageViewStyle"
                android:layout_height="@dimen/twohundredsevetyDp"
                android:layout_below="@id/q1"
                android:src="@drawable/quiz1" />

            <RadioGroup
                android:id="@+id/quiz1q"
                style="@style/RadioGroupStyle"
                android:layout_below="@id/quiz1">

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogChowChow" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogBorderCollie" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogDalmatian" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q2"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question2"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz2"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q2"
                android:src="@drawable/quiz2" />

            <EditText
                android:id="@+id/quiz2q"
                style="@style/EditTextStyle"
                android:layout_below="@id/quiz2"
                android:hint="@string/enterSol" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q3"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question3"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz3"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q3"
                android:src="@drawable/quiz3" />

            <RadioGroup
                android:id="@+id/quiz3q"
                style="@style/RadioGroupStyle"
                android:layout_below="@id/quiz3">

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogPoodle" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogPuli" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogMudi" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q4"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question4"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz4"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q4"
                android:src="@drawable/quiz4" />

            <LinearLayout
                style="@style/CheckboxesStyle"
                android:layout_below="@id/quiz4">

                <CheckBox
                    android:id="@+id/quiz4p1"
                    style="@style/ButtonStyle"
                    android:text="@string/dogBichonFrise" />

                <CheckBox
                    android:id="@+id/quiz4p2"
                    style="@style/ButtonStyle"
                    android:text="@string/dogMastiff" />

                <CheckBox
                    android:id="@+id/quiz4p3"
                    style="@style/ButtonStyle"
                    android:text="@string/dogPoodle" />

                <CheckBox
                    android:id="@+id/quiz4p4"
                    style="@style/ButtonStyle"
                    android:text="@string/dogFoxTerrier" />

                <CheckBox
                    android:id="@+id/quiz4p5"
                    style="@style/ButtonStyle"
                    android:text="@string/dogLabrador" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q5"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question5"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz5"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q5"
                android:src="@drawable/quiz5" />

            <EditText
                android:id="@+id/quiz5q"
                style="@style/EditTextStyle"
                android:layout_below="@id/quiz5"
                android:hint="@string/enterSol" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q6"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question6"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz6"
                style="@style/ImageViewStyle"
                android:layout_height="@dimen/hundredseventyDp"
                android:layout_below="@id/q6"
                android:src="@drawable/quiz6" />

            <RadioGroup
                android:id="@+id/quiz6q"
                style="@style/RadioGroupStyle"
                android:layout_below="@id/quiz6">

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogJackRusselTerrier" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogFoxTerrier" />

                <RadioButton
                    style="@style/ButtonStyle"
                    android:text="@string/dogBostonTerrier" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q7"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question7"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz7"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q7"
                android:src="@drawable/quiz7" />

            <EditText
                android:id="@+id/quiz7q"
                style="@style/EditTextStyle"
                android:layout_below="@id/quiz7"
                android:hint="@string/enterSol" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/q8"
                style="@style/QuestionStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question8"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/quiz8"
                style="@style/ImageViewStyle"
                android:layout_below="@id/q8"
                android:src="@drawable/quiz8" />

            <LinearLayout
                style="@style/CheckboxesStyle"
                android:layout_below="@id/quiz8">

                <CheckBox
                    android:id="@+id/quiz8p1"
                    style="@style/ButtonStyle"
                    android:text="@string/dogCollie" />

                <CheckBox
                    android:id="@+id/quiz8p2"
                    style="@style/ButtonStyle"
                    android:text="@string/dogGoldenRetriever" />

                <CheckBox
                    android:id="@+id/quiz8p3"
                    style="@style/ButtonStyle"
                    android:text="@string/dogPug" />

                <CheckBox
                    android:id="@+id/quiz8p4"
                    style="@style/ButtonStyle"
                    android:text="@string/dogBulldog" />

                <CheckBox
                    android:id="@+id/quiz8p5"
                    style="@style/ButtonStyle"
                    android:text="@string/dogBostonTerrier" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            style="@style/SubmitButtonStyle"
            android:fontFamily="cursive"
            android:onClick="submitAnswers"
            android:text="@string/submitAns" />

    </LinearLayout>

</ScrollView>